feat: enhance jetbrains-vmoptions logic and add ui-guide skill